--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,3 +16,11 @@ html,body,.container {
   display: table-cell;
   float: none;
 }
+
+.createJournalButton {
+    position:absolute;
+    bottom:15px;
+    left:15px;
+    background-color:black;
+    color: white;
+}
