--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,5 +22,15 @@ html,body,.container {
     bottom:15px;
     left:15px;
     background-color:black;
-    color: white;
+    color: white;   
+}
+
+.createJournalWindow{
+    position:absolute;
+    bottom:25px;
+    right:25px;
+    height: 95%;
+    width: 35%;
+    background-color:white;
+    color: black;  
 }
