--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+
 html,body,.container {
     height:100%;
 }
@@ -37,4 +38,14 @@ html,body,.container {
 
 .add-journal{
     padding: 20px;
+}
+
+#map {
+    height: 400px;
+    width: 100%;
+   }
+
+#listOfJournals {
+    position: absolute;
+    top: 15px;
 }
