UI enhancements, added buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,3 +49,13 @@ html,body,.container {
     position: absolute;
     top: 15px;
 }
+
+.articleBTN {
+    width:100%;
+    margin-bottom: 10px;
+    border-radius: 15px;
+}
+
+.scroll-full {
+    max-height: 98%;
+}
