--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ html,body,.container {
     top: 15px;
 }
 
-.articleBTN {
+.journalEntry {
     width:100%;
     margin-bottom: 10px;
     border-radius: 15px;
