--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 
 html, body, .container {
-    height:100%;
+    height:100%; /* this is not rendered by the browser and should be deleted - ck*/
 }
 .container {
     display:table;
@@ -49,7 +49,8 @@ html, body, .container {
 #listOfJournals {
     position: absolute;
     top: 15px;
-    padding: 10px;
+    padding: 0px; /* this was not rendered by the browser as it was overridden by the inline style which is now commented out - ck*/
+    margin: 0px;
 
 }
 
@@ -60,13 +61,18 @@ html, body, .container {
 }
 
 .journalEntry h4 {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+/* the following is from google fonts and will overide bootstrap - ck*/
+    font-family: 'Lato', sans-serif;
+/*    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
     font-size: 24px;
     text-align: center;
+    text-shadow: 2px 2px 2px #aaa;
 }
 
 .journalEntry p {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+/* the following is from google fonts and will overide bootstrap - ck*/
+    font-family: 'Lato', sans-serif;
+/*    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
     font-size: 16px;
     text-align: left;
 }
