--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ html, body, .container {
 #listOfJournals {
     position: absolute;
     top: 15px;
-    padding: 0px; /* this was not rendered by the browser as it was overridden by the inline style which is now commented out - ck*/
+    padding: 0px; /* this is now the setting for the id. previously thos was not rendered by the browser as it was overridden by the inline style which is now commented out in the html- ck*/
     margin: 0px;
 
 }
@@ -61,18 +61,16 @@ html, body, .container {
 }
 
 .journalEntry h4 {
-/* the following is from google fonts and will overide bootstrap - ck*/
+/* the following is from google fonts and will overide bootstrap default fonts. The link has been added to the head section of the html which is required to render properly - ck*/
     font-family: 'Lato', sans-serif;
-/*    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
     font-size: 24px;
     text-align: center;
     text-shadow: 2px 2px 2px #aaa;
 }
 
 .journalEntry p {
-/* the following is from google fonts and will overide bootstrap - ck*/
+/* the following is from google fonts and will overide bootstrap default fonts. The link has been added to the head section of the html which is required to render properly - ck*/
     font-family: 'Lato', sans-serif;
-/*    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
     font-size: 16px;
     text-align: left;
 }
