--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,18 @@
 html, body, .container {
     height:100%; /* this is not rendered by the browser and should be deleted - ck*/
 }
+
+h1 {
+/* the following is from google fonts and will overide bootstrap default fonts. The link has been added to the head section of the html which is required to render properly - ck*/
+font-family: 'Lato', sans-serif;
+font-size: 24px;
+text-align: center;
+text-shadow: 2px 2px 2px #aaa;
+
+
+
+}
+
 .container {
     display:table;
     width: 101%;
@@ -22,8 +34,12 @@ html, body, .container {
     position:absolute;
     bottom:15px;
     left:15px;
-    background-color:black;
-    color: white;   
+    padding: 0px;
+    margin: 0px;
+    background-color:rgba (0, 0, 0, 0.5); 
+    color: black;
+    
+      
 }
 
 .createJournalWindow{
@@ -77,4 +93,13 @@ html, body, .container {
 
 .scroll-full {
     max-height: 98%;
+}
+
+#btnAdd {
+    /* the following is from google fonts and will overide bootstrap default fonts. The link has been added to the head section of the html which is required to render properly - ck*/
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    text-align: center;
+
+    
 }
