--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,18 +2,6 @@
 html, body, .container {
     height:100%; /* this is not rendered by the browser and should be deleted - ck*/
 }
-
-h1 {
-/* the following is from google fonts and will overide bootstrap default fonts. The link has been added to the head section of the html which is required to render properly - ck*/
-font-family: 'Lato', sans-serif;
-font-size: 24px;
-text-align: center;
-text-shadow: 2px 2px 2px #aaa;
-
-
-
-}
-
 .container {
     display:table;
     width: 101%;
@@ -34,12 +22,8 @@ text-shadow: 2px 2px 2px #aaa;
     position:absolute;
     bottom:15px;
     left:15px;
-    padding: 0px;
-    margin: 0px;
-    background-color:rgba (0, 0, 0, 0.5); 
-    color: black;
-    
-      
+    background-color:black;
+    color: white;   
 }
 
 .createJournalWindow{
@@ -65,7 +49,7 @@ text-shadow: 2px 2px 2px #aaa;
 #listOfJournals {
     position: absolute;
     top: 15px;
-    padding: 0px; /* this is now the setting for the id. previously thos was not rendered by the browser as it was overridden by the inline style which is now commented out in the html- ck*/
+    padding: 0px; /* this was not rendered by the browser as it was overridden by the inline style which is now commented out - ck*/
     margin: 0px;
 
 }
@@ -77,29 +61,22 @@ text-shadow: 2px 2px 2px #aaa;
 }
 
 .journalEntry h4 {
-/* the following is from google fonts and will overide bootstrap default fonts. The link has been added to the head section of the html which is required to render properly - ck*/
+/* the following is from google fonts and will overide bootstrap - ck*/
     font-family: 'Lato', sans-serif;
+/*    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
     font-size: 24px;
     text-align: center;
     text-shadow: 2px 2px 2px #aaa;
 }
 
 .journalEntry p {
-/* the following is from google fonts and will overide bootstrap default fonts. The link has been added to the head section of the html which is required to render properly - ck*/
+/* the following is from google fonts and will overide bootstrap - ck*/
     font-family: 'Lato', sans-serif;
+/*    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
     font-size: 16px;
     text-align: left;
 }
 
 .scroll-full {
     max-height: 98%;
-}
-
-#btnAdd {
-    /* the following is from google fonts and will overide bootstrap default fonts. The link has been added to the head section of the html which is required to render properly - ck*/
-    font-family: 'Lato', sans-serif;
-    font-size: 16px;
-    text-align: center;
-
-    
 }
