--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 
-html, body, .container {
+html,body,.container {
     height:100%;
 }
 .container {
@@ -20,6 +20,7 @@ html, body, .container {
 
 .createJournalButton {
     position:absolute;
+    padding-top: -25px;
     bottom:15px;
     left:15px;
     background-color:black;
@@ -49,26 +50,12 @@ html, body, .container {
 #listOfJournals {
     position: absolute;
     top: 15px;
-    padding: 10px;
-
 }
 
-.journalEntry {
+.articleBTN {
     width:100%;
     margin-bottom: 10px;
     border-radius: 15px;
-}
-
-.journalEntry h4 {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 24px;
-    text-align: center;
-}
-
-.journalEntry p {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 16px;
-    text-align: left;
 }
 
 .scroll-full {
