--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,6 +99,12 @@ text-shadow: 2px 2px 2px #aaa;
     font-family: 'Lato', sans-serif;
     font-size: 16px;
     text-align: center;
+    border-radius: 15px;
+    margin: 30px;
+    padding: 5px;    
+}
 
-    
+#btnAdd:hover{
+    background-color: coral;
+    color: white;
 }
