--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,6 +99,16 @@ text-shadow: 2px 2px 2px #aaa;
     font-family: 'Lato', sans-serif;
     font-size: 16px;
     text-align: center;
+}
 
-    
+.viewEntryWindow {
+    display: none;
+    position:absolute;
+    bottom:25px;
+    right:25px;
+    height: 95%;
+    width: 45%;
+    background-color:white;
+    color: black;  
+    display: none;
 }
