--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,8 @@ text-shadow: 2px 2px 2px #aaa;
     text-align: center;
     border-radius: 15px;
     margin: 30px;
-    padding: 5px;    
+    padding-top: -25px;   
+    padding: 5px; 
 }
 
 #btnAdd:hover{
