--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,27 @@ text-shadow: 2px 2px 2px #aaa;
       
 }
 
+#btnTog {
+    position:absolute;
+    bottom:0%;
+    
+    right:0px;
+    padding: 5px;
+    margin: 0px;
+    background-color:rgba (0, 0, 0, 0.5); 
+    color: black;
+    
+      
+}
+#btnTog:hover{
+    background-color: tomato;
+    bottom:0%;
+    height: 100%;
+    color: white;
+}
+
+
+
 .createJournalWindow{
     position:absolute;
     bottom:25px;
